# meshview-nix

./: .gitmodules  flake.nix  pyproject.toml  update.sh
pkgs/: src.nix
