[project]
name = "meshview-nix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiodns~=3.2.0",
    "aiohttp~=3.11.12",
    "aiohttp-sse>=2.2.0",
    "aiomqtt~=2.3.0",
    "aiosqlite~=0.21.0",
    "asyncpg~=0.30.0",
    "cryptography~=44.0.1",
    "jinja2~=3.1.5",
    "markupsafe~=3.0.2",
    "matplotlib~=3.10.0",
    "numpy~=2.2.3",
    "objgraph~=3.6.2",
    "pandas~=2.2.3",
    "pillow~=11.1.0",
    "plotly~=6.0.0",
    "protobuf~=5.29.3",
    "psutil~=7.0.0",
    "pydot~=3.0.4",
    "seaborn~=0.13.2",
    "sqlalchemy[asyncio]~=2.0.38",
]
